--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,3 +7,7 @@ v1.5.36 6/3/2014 -- fixed some issues with the gift card processing/unit tests.
 v1.5.37 6/11/2014 -- Added validation for check name on ACH CCD transactions.
 v1.5.4 6/26/2014 -- General fixes and moved code in core files to __init__ files.
 v1.5.42 8/22/2014 -- Updated error handling to always throw HpsExcpetion based exceptions.
+v1.5.5 1/13/2015 -- Updated eCheck and general bug fixes.
+v2.0.1 3/18/2015 -- Implemented a fluent interface, updated gift, ACH and Payplan interfaces.
+v2.0.1.1 4/10/2015 -- Updated our repo information
+v2.1 5/11/2015 -- Added Debit and EBT interfaces. Added certification scripts.
