--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,4 +10,7 @@ v1.5.42 8/22/2014 -- Updated error handling to always throw HpsExcpetion based e
 v1.5.5 1/13/2015 -- Updated eCheck and general bug fixes.
 v2.0.1 3/18/2015 -- Implemented a fluent interface, updated gift, ACH and Payplan interfaces.
 v2.0.1.1 4/10/2015 -- Updated our repo information
-v2.1 5/11/2015 -- Added Debit and EBT interfaces. Added certification scripts.
+v2.0.2 5/11/2015 -- Added Debit and EBT interfaces. Added certification scripts.
+v2.0.4 5/11/2015 -- HpsCreditException now returns issuer exceptions and removed the print statements from validation
+v2.0.5 5/11/2015 -- Adding certification tests
+v2.0.6 5/11/2015 -- HpsGatewayException also now returning details properly
