--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,3 +15,4 @@ v2.0.4 5/11/2015 -- HpsCreditException now returns issuer exceptions and removed
 v2.0.5 5/11/2015 -- Adding certification tests
 v2.0.6 5/11/2015 -- HpsGatewayException also now returning details properly
 v2.1.1 6/25/2015 -- PCI 3 URL Changes version matched up with GitHub
+v2.1.3 8/26/2015 -- Added the Manage Token call to the HpsCreditService
