--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,3 +18,5 @@ v2.1.1 6/25/2015 -- PCI 3 URL Changes version matched up with GitHub
 v2.1.3 8/26/2015 -- Added the Manage Token call to the HpsCreditService
 v2.1.4 8/26/2015 -- Fixed bug in transaction parsing
 v2.1.5 8/27/2015 -- Fixed issuer surrounding transaction-less response messages
+v2.4.1 11/24/2015 -- Updated URLS to TLS1.1+ end points
+v2.5.1 2.12.2015 -- Updated expired test card information
